--- a/backend/views/index.hbs
+++ b/backend/views/index.hbs
@@ -3,17 +3,22 @@
 
 <a type="button"  href="/izdelek/">Vsi artikli(JSON)</span></a>
 
+<br><br>
+<p>Hardcode vnosi:</p>
+<br>
+Vnos Cene
+
 
 <form action="/cena/" method="post" >
   <div class="form-group">
     <input type="date"  name="Datum_cas"  >
   </div>
     <div class="form-group">
-   <input type="text" name="id_izdelka" required>
+   <input type="text" name="id_izdelka" placeholder="iz_izdelka">
   </div>
     </div>
     <div class="form-group">
-   <input type="number" name="Cena" class="form-control" placeholder="Tag" required>
+   <input type="number" name="Cena" class="form-control" placeholder="cena">
   </div>
 
  <div class="tp">
@@ -21,11 +26,14 @@
     </div>
 </form>
 
-Trgovine
+
+
+
+Vnos Trgovine
 <br><br>
 <form action="/trgovina/" method="post" >
   <div class="form-group">
-    <input type="text"  name="Naziv"  >
+    <input type="text"  name="Naziv" placeholder="ime_trgovine" >
   </div>
    
  <div class="tp">
@@ -33,24 +41,25 @@ Trgovine
     </div>
 </form>
 
+<br><br><br><br>
+Vnos izdelekk
 
-Izdelekk
 <br><br>
 <form action="/izdelek/" method="post" >
   <div class="form-group">
-    <input type="text"  name="id_trgovine"  >
+    <input type="text"  name="id_trgovine" placeholder="id_trgovine v bazi/NE IME" >
   </div>
    <div class="form-group">
-    <input type="text"  name="Naziv"  >
+    <input type="text"  name="Naziv" placeholder="naziv" >
   </div>
    <div class="form-group">
-    <input type="text"  name="Vrsta"  >
+    <input type="text"  name="Vrsta" placeholder="vrsta" >
   </div>
    <div class="form-group">
-    <input type="text"  name="Opis"  >
+    <input type="text"  name="Opis"  placeholder="opis">
   </div>
    <div class="form-group">
-    <input type="test"  name="Slika"  >
+    <input type="test"  name="Slika" placeholder="dir slike" >
   </div>
    
  <div class="tp">
